--- a/chatui/static/styles.css
+++ b/chatui/static/styles.css
@@ -1,35 +1,47 @@
 Screen {
     background: #212529;
-    /* background: #343a40; */
 }
 
 MessageBox {
+    layout: horizontal;
     height: auto;
+    align-horizontal: center;
 }
 
 .message {
-    width: 0.5fr;
-    border: tall #0f70d1;
-    padding: 1 3 1 3;
-    margin: 1 25 1 25;
+    width: auto;
+    min-width: 25%;
+    border: tall black;
+    padding: 1 3;
+    margin: 1 0;
     background: #343a40;
 }
 
+.info {
+    width: 50%;
+}
+
 .question {
-    dock: left;
+    margin: 1 25 1 0;
 }
 
 .answer {
-    dock: right;
+    margin: 1 0 1 25;
 }
 
 #input_box {
     dock: bottom;
     height: auto;
-    margin-top: 1;
+    width: 100%;
+    margin: 0 0 2 0;
+    align_horizontal: center;
 }
 
 #message_input {
-    width: 1fr;
+    width: 50%;
     background: #343a40;
+}
+
+#send_button {
+    width: auto;
 }
